<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">Phone Information</string>

    
    <string name="activity_label">My Phone Information</string>
    <string name="batteryInfo">Battery Information</string>
    <string name="SMSInfo">SMS Information</string>
    <string name="missedCallsInfo">Missed Calls Information</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving program</string>
    <string name="title_paired_devices">Paried Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="bt_status_icon">Accessory display connection status</string>
</resources>
